--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <p class="t1" >Improve your front-end skills by building projects</p>
 
       <p class="t2" style="color: hsl(212, 45%, 89%);">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-
+      <p class="container"></p>
     </div>
   </div>
 
 
-  <!-- 
-  <div class="attribution">
+  
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/NazimFilzer/qr-code-component-main">Nazim Filzer</a>.
   </div> -->
 </body>
 
