--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Sacramento&display=swap"
@@ -15,22 +15,25 @@
 </head>
 
 <body>
-  <div class="qr-code ">
-    <div>
-      <img src="images/image-qr-code.png" alt="qr">
-      <p class="t1" >Improve your front-end skills by building projects</p>
-
-      <p class="t2" style="color: hsl(212, 45%, 89%);">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      <p class="container"></p>
-    </div>
-  </div>
-
-<!-- https://inquisitive-conkies-2730ed.netlify.app/ -->
+  <div class="container">
+    <div class="qr-code ">
+      <div class="card">
+        <img src="images/image-qr-code.png" alt="qr">
+        <p class="t1" >Improve your front-end skills by building projects</p>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/NazimFilzer/qr-code-component-main">Nazim Filzer</a>.
+        <p class="t2" style="color: hsl(212, 45%, 89%);">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <p class="container"></p>
+      </div>
+      
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/NazimFilzer/qr-code-component-main">Nazim Filzer</a>.
+    </div>
+
   </div>
+  
+  
 </body>
 
 </html>
