--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" href="styles2.css">
@@ -19,12 +19,13 @@
     <div class="qr-code ">
       <div class="card">
         <img src="images/image-qr-code.png" alt="qr">
-        <p class="t1" >Improve your front-end skills by building projects</p>
-  
-        <p class="t2" style="color: hsl(212, 45%, 89%);">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <p class="t1">Improve your front-end skills by building projects</p>
+
+        <p class="t2">Scan the QR code to visit Frontend Mentor and take your coding
+          skills to the next level</p>
         <p class="container"></p>
       </div>
-      
+
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
@@ -32,8 +33,8 @@
     </div>
 
   </div>
-  
-  
+
+
 </body>
 
 </html>
